force-app/main/default/objects/Account/fields/CustomFieldSecurityInStandardObject__c.field-meta.xml
<CustomField>
    <fullName>CustomFieldSecurityInStandardObject__c</fullName>
    <defaultValue>&apos;Hello&apos;</defaultValue>
    <label>CustomFieldSecurityInStandardObject</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>