force-app/main/default/objects/Account/fields/ExternalIdOveruseFive__c.field-meta.xml
<CustomField>
    <fullName>ExternalIdOveruseFive__c</fullName>
    <externalId>true</externalId>
    <label>ExternalIdOveruseFive</label>
    <length>255</length>
    <type>Text</type>
</CustomField>