force-app/main/default/objects/Account/fields/ExternalIdOveruseFour__c.field-meta.xml
<CustomField>
    <fullName>ExternalIdOveruseFour__c</fullName>
    <externalId>true</externalId>
    <label>ExternalIdOveruseFour</label>
    <length>255</length>
    <type>Text</type>
</CustomField>