force-app/main/default/objects/Account/fields/ExternalIdOveruseOne__c.field-meta.xml
<CustomField>
    <fullName>ExternalIdOveruseOne__c</fullName>
    <externalId>true</externalId>
    <label>ExternalIdOveruseOne</label>
    <length>255</length>
    <type>Text</type>
</CustomField>