force-app/main/default/objects/Account/fields/ExternalIdOveruseThree__c.field-meta.xml
<CustomField>
    <fullName>ExternalIdOveruseThree__c</fullName>
    <externalId>true</externalId>
    <label>ExternalIdOveruseThree</label>
    <length>255</length>
    <type>Text</type>
</CustomField>