force-app/main/default/objects/Account/fields/ExternalIdOveruseTwo__c.field-meta.xml
<CustomField>
    <fullName>ExternalIdOveruseTwo__c</fullName>
    <externalId>true</externalId>
    <label>ExternalIdOveruseTwo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>