force-app/main/default/objects/Account/fields/LimitCustomFieldsEight__c.field-meta.xml
<CustomField>
    <fullName>LimitCustomFieldsEight__c</fullName>
    <label>LimitCustomFieldsEight</label>
    <length>20</length>
    <type>Text</type>
</CustomField>