force-app/main/default/objects/Account/fields/LimitCustomFieldsEighteen__c.field-meta.xml
<CustomField>
    <fullName>LimitCustomFieldsEighteen__c</fullName>
    <label>LimitCustomFieldsEighteen</label>
    <length>20</length>
    <type>Text</type>
</CustomField>