force-app/main/default/objects/Account/fields/LimitCustomFieldsEighty__c.field-meta.xml
<CustomField>
    <fullName>LimitCustomFieldsEighty__c</fullName>
    <label>LimitCustomFieldsEighty</label>
    <length>20</length>
    <type>Text</type>
</CustomField>