force-app/main/default/objects/Account/fields/LimitCustomFieldsEleven__c.field-meta.xml
<CustomField>
    <fullName>LimitCustomFieldsEleven__c</fullName>
    <label>LimitCustomFieldsEleven</label>
    <length>20</length>
    <type>Text</type>
</CustomField>