force-app/main/default/objects/Account/fields/LimitCustomFieldsFifteen__c.field-meta.xml
<CustomField>
    <fullName>LimitCustomFieldsFifteen__c</fullName>
    <label>LimitCustomFieldsFifteen</label>
    <length>20</length>
    <type>Text</type>
</CustomField>