force-app/main/default/objects/Account/fields/LimitCustomFieldsFifty__c.field-meta.xml
<CustomField>
    <fullName>LimitCustomFieldsFifty__c</fullName>
    <label>LimitCustomFieldsFifty</label>
    <length>20</length>
    <type>Text</type>
</CustomField>