force-app/main/default/objects/Account/fields/LimitCustomFieldsFiftyEight__c.field-meta.xml
<CustomField>
    <fullName>LimitCustomFieldsFiftyEight__c</fullName>
    <label>LimitCustomFieldsFiftyEight</label>
    <length>20</length>
    <type>Text</type>
</CustomField>