force-app/main/default/objects/Account/fields/LimitCustomFieldsFiftyFive__c.field-meta.xml
<CustomField>
    <fullName>LimitCustomFieldsFiftyFive__c</fullName>
    <label>LimitCustomFieldsFiftyFive</label>
    <length>20</length>
    <type>Text</type>
</CustomField>