force-app/main/default/objects/Account/fields/LimitCustomFieldsFiftyFour__c.field-meta.xml
<CustomField>
    <fullName>LimitCustomFieldsFiftyFour__c</fullName>
    <label>LimitCustomFieldsFiftyFour</label>
    <length>20</length>
    <type>Text</type>
</CustomField>