force-app/main/default/objects/Account/fields/LimitCustomFieldsFiftyNine__c.field-meta.xml
<CustomField>
    <fullName>LimitCustomFieldsFiftyNine__c</fullName>
    <label>LimitCustomFieldsFiftyNine</label>
    <length>20</length>
    <type>Text</type>
</CustomField>