force-app/main/default/objects/Account/fields/LimitCustomFieldsFiftyOne__c.field-meta.xml
<CustomField>
    <fullName>LimitCustomFieldsFiftyOne__c</fullName>
    <label>LimitCustomFieldsFiftyOne</label>
    <length>20</length>
    <type>Text</type>
</CustomField>