force-app/main/default/objects/Account/fields/LimitCustomFieldsFiftySeven__c.field-meta.xml
<CustomField>
    <fullName>LimitCustomFieldsFiftySeven__c</fullName>
    <label>LimitCustomFieldsFiftySeven</label>
    <length>20</length>
    <type>Text</type>
</CustomField>