force-app/main/default/objects/Account/fields/LimitCustomFieldsFiftySix__c.field-meta.xml
<CustomField>
    <fullName>LimitCustomFieldsFiftySix__c</fullName>
    <label>LimitCustomFieldsFiftySix</label>
    <length>20</length>
    <type>Text</type>
</CustomField>