force-app/main/default/objects/Account/fields/LimitCustomFieldsFiftyThree__c.field-meta.xml
<CustomField>
    <fullName>LimitCustomFieldsFiftyThree__c</fullName>
    <label>LimitCustomFieldsFiftyThree</label>
    <length>20</length>
    <type>Text</type>
</CustomField>