force-app/main/default/objects/Account/fields/LimitCustomFieldsFiftyTwo__c.field-meta.xml
<CustomField>
    <fullName>LimitCustomFieldsFiftyTwo__c</fullName>
    <label>LimitCustomFieldsFiftyTwo</label>
    <length>20</length>
    <type>Text</type>
</CustomField>