force-app/main/default/objects/Account/fields/LimitCustomFieldsFive__c.field-meta.xml
<CustomField>
    <fullName>LimitCustomFieldsFive__c</fullName>
    <label>LimitCustomFieldsFive</label>
    <length>20</length>
    <type>Text</type>
</CustomField>