force-app/main/default/objects/Account/fields/LimitCustomFieldsForty__c.field-meta.xml
<CustomField>
    <fullName>LimitCustomFieldsForty__c</fullName>
    <label>LimitCustomFieldsForty</label>
    <length>20</length>
    <type>Text</type>
</CustomField>