force-app/main/default/objects/Account/fields/LimitCustomFieldsFortyEight__c.field-meta.xml
<CustomField>
    <fullName>LimitCustomFieldsFortyEight__c</fullName>
    <label>LimitCustomFieldsFortyEight</label>
    <length>20</length>
    <type>Text</type>
</CustomField>