force-app/main/default/objects/Account/fields/LimitCustomFieldsFortyFive__c.field-meta.xml
<CustomField>
    <fullName>LimitCustomFieldsFortyFive__c</fullName>
    <label>LimitCustomFieldsFortyFive</label>
    <length>20</length>
    <type>Text</type>
</CustomField>