force-app/main/default/objects/Account/fields/LimitCustomFieldsFortyFour__c.field-meta.xml
<CustomField>
    <fullName>LimitCustomFieldsFortyFour__c</fullName>
    <label>LimitCustomFieldsFortyFour</label>
    <length>20</length>
    <type>Text</type>
</CustomField>