force-app/main/default/objects/Account/fields/LimitCustomFieldsFortyNine__c.field-meta.xml
<CustomField>
    <fullName>LimitCustomFieldsFortyNine__c</fullName>
    <label>LimitCustomFieldsFortyNine</label>
    <length>20</length>
    <type>Text</type>
</CustomField>