force-app/main/default/objects/Account/fields/LimitCustomFieldsFortyOne__c.field-meta.xml
<CustomField>
    <fullName>LimitCustomFieldsFortyOne__c</fullName>
    <label>LimitCustomFieldsFortyOne</label>
    <length>20</length>
    <type>Text</type>
</CustomField>