force-app/main/default/objects/Account/fields/LimitCustomFieldsFortySeven__c.field-meta.xml
<CustomField>
    <fullName>LimitCustomFieldsFortySeven__c</fullName>
    <label>LimitCustomFieldsFortySeven</label>
    <length>20</length>
    <type>Text</type>
</CustomField>