force-app/main/default/objects/Account/fields/LimitCustomFieldsFortySix__c.field-meta.xml
<CustomField>
    <fullName>LimitCustomFieldsFortySix__c</fullName>
    <label>LimitCustomFieldsFortySix</label>
    <length>20</length>
    <type>Text</type>
</CustomField>