force-app/main/default/objects/Account/fields/LimitCustomFieldsFortyThree__c.field-meta.xml
<CustomField>
    <fullName>LimitCustomFieldsFortyThree__c</fullName>
    <label>LimitCustomFieldsFortyThree</label>
    <length>20</length>
    <type>Text</type>
</CustomField>