force-app/main/default/objects/Account/fields/LimitCustomFieldsFortyTwo__c.field-meta.xml
<CustomField>
    <fullName>LimitCustomFieldsFortyTwo__c</fullName>
    <label>LimitCustomFieldsFortyTwo</label>
    <length>20</length>
    <type>Text</type>
</CustomField>