force-app/main/default/objects/Account/fields/LimitCustomFieldsFour__c.field-meta.xml
<CustomField>
    <fullName>LimitCustomFieldsFour__c</fullName>
    <label>LimitCustomFieldsFour</label>
    <length>20</length>
    <type>Text</type>
</CustomField>