force-app/main/default/objects/Account/fields/LimitCustomFieldsFourteen__c.field-meta.xml
<CustomField>
    <fullName>LimitCustomFieldsFourteen__c</fullName>
    <label>LimitCustomFieldsFourteen</label>
    <length>20</length>
    <type>Text</type>
</CustomField>