force-app/main/default/objects/Account/fields/LimitCustomFieldsNine__c.field-meta.xml
<CustomField>
    <fullName>LimitCustomFieldsNine__c</fullName>
    <label>LimitCustomFieldsNine</label>
    <length>20</length>
    <type>Text</type>
</CustomField>