force-app/main/default/objects/Account/fields/LimitCustomFieldsNineteen__c.field-meta.xml
<CustomField>
    <fullName>LimitCustomFieldsNineteen__c</fullName>
    <label>LimitCustomFieldsNineteen</label>
    <length>20</length>
    <type>Text</type>
</CustomField>