force-app/main/default/objects/Account/fields/LimitCustomFieldsOne__c.field-meta.xml
<CustomField>
    <fullName>LimitCustomFieldsOne__c</fullName>
    <label>LimitCustomFieldsOne</label>
    <length>20</length>
    <type>Text</type>
</CustomField>