force-app/main/default/objects/Account/fields/LimitCustomFieldsSeven__c.field-meta.xml
<CustomField>
    <fullName>LimitCustomFieldsSeven__c</fullName>
    <label>LimitCustomFieldsSeven</label>
    <length>20</length>
    <type>Text</type>
</CustomField>