force-app/main/default/objects/Account/fields/LimitCustomFieldsSeventeen__c.field-meta.xml
<CustomField>
    <fullName>LimitCustomFieldsSeventeen__c</fullName>
    <label>LimitCustomFieldsSeventeen</label>
    <length>20</length>
    <type>Text</type>
</CustomField>