force-app/main/default/objects/Account/fields/LimitCustomFieldsSeventy__c.field-meta.xml
<CustomField>
    <fullName>LimitCustomFieldsSeventy__c</fullName>
    <label>LimitCustomFieldsSeventy</label>
    <length>20</length>
    <type>Text</type>
</CustomField>