force-app/main/default/objects/Account/fields/LimitCustomFieldsSeventyEight__c.field-meta.xml
<CustomField>
    <fullName>LimitCustomFieldsSeventyEight__c</fullName>
    <label>LimitCustomFieldsSeventyEight</label>
    <length>20</length>
    <type>Text</type>
</CustomField>