force-app/main/default/objects/Account/fields/LimitCustomFieldsSeventyFive__c.field-meta.xml
<CustomField>
    <fullName>LimitCustomFieldsSeventyFive__c</fullName>
    <label>LimitCustomFieldsSeventyFive</label>
    <length>20</length>
    <type>Text</type>
</CustomField>