force-app/main/default/objects/Account/fields/LimitCustomFieldsSeventyFour__c.field-meta.xml
<CustomField>
    <fullName>LimitCustomFieldsSeventyFour__c</fullName>
    <label>LimitCustomFieldsSeventyFour</label>
    <length>20</length>
    <type>Text</type>
</CustomField>