force-app/main/default/objects/Account/fields/LimitCustomFieldsSeventyNine__c.field-meta.xml
<CustomField>
    <fullName>LimitCustomFieldsSeventyNine__c</fullName>
    <label>LimitCustomFieldsSeventyNine</label>
    <length>20</length>
    <type>Text</type>
</CustomField>