force-app/main/default/objects/Account/fields/LimitCustomFieldsSeventyOne__c.field-meta.xml
<CustomField>
    <fullName>LimitCustomFieldsSeventyOne__c</fullName>
    <label>LimitCustomFieldsSeventyOne</label>
    <length>20</length>
    <type>Text</type>
</CustomField>