force-app/main/default/objects/Account/fields/LimitCustomFieldsSeventySeven__c.field-meta.xml
<CustomField>
    <fullName>LimitCustomFieldsSeventySeven__c</fullName>
    <label>LimitCustomFieldsSeventySeven</label>
    <length>20</length>
    <type>Text</type>
</CustomField>