force-app/main/default/objects/Account/fields/LimitCustomFieldsSeventySix__c.field-meta.xml
<CustomField>
    <fullName>LimitCustomFieldsSeventySix__c</fullName>
    <label>LimitCustomFieldsSeventySix</label>
    <length>20</length>
    <type>Text</type>
</CustomField>