force-app/main/default/objects/Account/fields/LimitCustomFieldsSeventyThree__c.field-meta.xml
<CustomField>
    <fullName>LimitCustomFieldsSeventyThree__c</fullName>
    <label>LimitCustomFieldsSeventyThree</label>
    <length>20</length>
    <type>Text</type>
</CustomField>