force-app/main/default/objects/Account/fields/LimitCustomFieldsSeventyTwo__c.field-meta.xml
<CustomField>
    <fullName>LimitCustomFieldsSeventyTwo__c</fullName>
    <label>LimitCustomFieldsSeventyTwo</label>
    <length>20</length>
    <type>Text</type>
</CustomField>