force-app/main/default/objects/Account/fields/LimitCustomFieldsSix__c.field-meta.xml
<CustomField>
    <fullName>LimitCustomFieldsSix__c</fullName>
    <label>LimitCustomFieldsSix</label>
    <length>20</length>
    <type>Text</type>
</CustomField>