force-app/main/default/objects/Account/fields/LimitCustomFieldsSixteen__c.field-meta.xml
<CustomField>
    <fullName>LimitCustomFieldsSixteen__c</fullName>
    <label>LimitCustomFieldsSixteen</label>
    <length>20</length>
    <type>Text</type>
</CustomField>