force-app/main/default/objects/Account/fields/LimitCustomFieldsSixty__c.field-meta.xml
<CustomField>
    <fullName>LimitCustomFieldsSixty__c</fullName>
    <label>LimitCustomFieldsSixty</label>
    <length>20</length>
    <type>Text</type>
</CustomField>