force-app/main/default/objects/Account/fields/LimitCustomFieldsSixtyEight__c.field-meta.xml
<CustomField>
    <fullName>LimitCustomFieldsSixtyEight__c</fullName>
    <label>LimitCustomFieldsSixtyEight</label>
    <length>20</length>
    <type>Text</type>
</CustomField>