force-app/main/default/objects/Account/fields/LimitCustomFieldsSixtyFive__c.field-meta.xml
<CustomField>
    <fullName>LimitCustomFieldsSixtyFive__c</fullName>
    <label>LimitCustomFieldsSixtyFive</label>
    <length>20</length>
    <type>Text</type>
</CustomField>