force-app/main/default/objects/Account/fields/LimitCustomFieldsSixtyFour__c.field-meta.xml
<CustomField>
    <fullName>LimitCustomFieldsSixtyFour__c</fullName>
    <label>LimitCustomFieldsSixtyFour</label>
    <length>20</length>
    <type>Text</type>
</CustomField>