force-app/main/default/objects/Account/fields/LimitCustomFieldsSixtyNine__c.field-meta.xml
<CustomField>
    <fullName>LimitCustomFieldsSixtyNine__c</fullName>
    <label>LimitCustomFieldsSixtyNine</label>
    <length>20</length>
    <type>Text</type>
</CustomField>