force-app/main/default/objects/Account/fields/LimitCustomFieldsSixtyOne__c.field-meta.xml
<CustomField>
    <fullName>LimitCustomFieldsSixtyOne__c</fullName>
    <label>LimitCustomFieldsSixtyOne</label>
    <length>20</length>
    <type>Text</type>
</CustomField>