force-app/main/default/objects/Account/fields/LimitCustomFieldsSixtySeven__c.field-meta.xml
<CustomField>
    <fullName>LimitCustomFieldsSixtySeven__c</fullName>
    <label>LimitCustomFieldsSixtySeven</label>
    <length>20</length>
    <type>Text</type>
</CustomField>