force-app/main/default/objects/Account/fields/LimitCustomFieldsSixtySix__c.field-meta.xml
<CustomField>
    <fullName>LimitCustomFieldsSixtySix__c</fullName>
    <label>LimitCustomFieldsSixtySix</label>
    <length>20</length>
    <type>Text</type>
</CustomField>