force-app/main/default/objects/Account/fields/LimitCustomFieldsSixtyThree__c.field-meta.xml
<CustomField>
    <fullName>LimitCustomFieldsSixtyThree__c</fullName>
    <label>LimitCustomFieldsSixtyThree</label>
    <length>20</length>
    <type>Text</type>
</CustomField>