force-app/main/default/objects/Account/fields/LimitCustomFieldsSixtyTwo__c.field-meta.xml
<CustomField>
    <fullName>LimitCustomFieldsSixtyTwo__c</fullName>
    <label>LimitCustomFieldsSixtyTwo</label>
    <length>20</length>
    <type>Text</type>
</CustomField>