force-app/main/default/objects/Account/fields/LimitCustomFieldsTen__c.field-meta.xml
<CustomField>
    <fullName>LimitCustomFieldsTen__c</fullName>
    <label>LimitCustomFieldsTen</label>
    <length>20</length>
    <type>Text</type>
</CustomField>