force-app/main/default/objects/Account/fields/LimitCustomFieldsThirteen__c.field-meta.xml
<CustomField>
    <fullName>LimitCustomFieldsThirteen__c</fullName>
    <label>LimitCustomFieldsThirteen</label>
    <length>20</length>
    <type>Text</type>
</CustomField>