force-app/main/default/objects/Account/fields/LimitCustomFieldsThirty__c.field-meta.xml
<CustomField>
    <fullName>LimitCustomFieldsThirty__c</fullName>
    <label>LimitCustomFieldsThirty</label>
    <length>20</length>
    <type>Text</type>
</CustomField>