force-app/main/default/objects/Account/fields/LimitCustomFieldsThirtyEight__c.field-meta.xml
<CustomField>
    <fullName>LimitCustomFieldsThirtyEight__c</fullName>
    <label>LimitCustomFieldsThirtyEight</label>
    <length>20</length>
    <type>Text</type>
</CustomField>