force-app/main/default/objects/Account/fields/LimitCustomFieldsThirtyFive__c.field-meta.xml
<CustomField>
    <fullName>LimitCustomFieldsThirtyFive__c</fullName>
    <label>LimitCustomFieldsThirtyFive</label>
    <length>20</length>
    <type>Text</type>
</CustomField>