force-app/main/default/objects/Account/fields/LimitCustomFieldsThirtyFour__c.field-meta.xml
<CustomField>
    <fullName>LimitCustomFieldsThirtyFour__c</fullName>
    <label>LimitCustomFieldsThirtyFour</label>
    <length>20</length>
    <type>Text</type>
</CustomField>