force-app/main/default/objects/Account/fields/LimitCustomFieldsThirtyNine__c.field-meta.xml
<CustomField>
    <fullName>LimitCustomFieldsThirtyNine__c</fullName>
    <label>LimitCustomFieldsThirtyNine</label>
    <length>20</length>
    <type>Text</type>
</CustomField>