force-app/main/default/objects/Account/fields/LimitCustomFieldsThirtyOne__c.field-meta.xml
<CustomField>
    <fullName>LimitCustomFieldsThirtyOne__c</fullName>
    <label>LimitCustomFieldsThirtyOne</label>
    <length>20</length>
    <type>Text</type>
</CustomField>