force-app/main/default/objects/Account/fields/LimitCustomFieldsThirtySeven__c.field-meta.xml
<CustomField>
    <fullName>LimitCustomFieldsThirtySeven__c</fullName>
    <label>LimitCustomFieldsThirtySeven</label>
    <length>20</length>
    <type>Text</type>
</CustomField>