force-app/main/default/objects/Account/fields/LimitCustomFieldsThirtySix__c.field-meta.xml
<CustomField>
    <fullName>LimitCustomFieldsThirtySix__c</fullName>
    <label>LimitCustomFieldsThirtySix</label>
    <length>20</length>
    <type>Text</type>
</CustomField>