force-app/main/default/objects/Account/fields/LimitCustomFieldsThirtyThree__c.field-meta.xml
<CustomField>
    <fullName>LimitCustomFieldsThirtyThree__c</fullName>
    <label>LimitCustomFieldsThirtyThree</label>
    <length>20</length>
    <type>Text</type>
</CustomField>