force-app/main/default/objects/Account/fields/LimitCustomFieldsThirtyTwo__c.field-meta.xml
<CustomField>
    <fullName>LimitCustomFieldsThirtyTwo__c</fullName>
    <label>LimitCustomFieldsThirtyTwo</label>
    <length>20</length>
    <type>Text</type>
</CustomField>