force-app/main/default/objects/Account/fields/LimitCustomFieldsThree__c.field-meta.xml
<CustomField>
    <fullName>LimitCustomFieldsThree__c</fullName>
    <label>LimitCustomFieldsThree</label>
    <length>20</length>
    <type>Text</type>
</CustomField>