force-app/main/default/objects/Account/fields/LimitCustomFieldsTwelve__c.field-meta.xml
<CustomField>
    <fullName>LimitCustomFieldsTwelve__c</fullName>
    <label>LimitCustomFieldsTwelve</label>
    <length>20</length>
    <type>Text</type>
</CustomField>