force-app/main/default/objects/Account/fields/LimitCustomFieldsTwenty__c.field-meta.xml
<CustomField>
    <fullName>LimitCustomFieldsTwenty__c</fullName>
    <label>LimitCustomFieldsTwenty</label>
    <length>20</length>
    <type>Text</type>
</CustomField>