force-app/main/default/objects/Account/fields/LimitCustomFieldsTwentyEight__c.field-meta.xml
<CustomField>
    <fullName>LimitCustomFieldsTwentyEight__c</fullName>
    <label>LimitCustomFieldsTwentyEight</label>
    <length>20</length>
    <type>Text</type>
</CustomField>