force-app/main/default/objects/Account/fields/LimitCustomFieldsTwentyFive__c.field-meta.xml
<CustomField>
    <fullName>LimitCustomFieldsTwentyFive__c</fullName>
    <label>LimitCustomFieldsTwentyFive</label>
    <length>20</length>
    <type>Text</type>
</CustomField>