force-app/main/default/objects/Account/fields/LimitCustomFieldsTwentyFour__c.field-meta.xml
<CustomField>
    <fullName>LimitCustomFieldsTwentyFour__c</fullName>
    <label>LimitCustomFieldsTwentyFour</label>
    <length>20</length>
    <type>Text</type>
</CustomField>