force-app/main/default/objects/Account/fields/LimitCustomFieldsTwentyNine__c.field-meta.xml
<CustomField>
    <fullName>LimitCustomFieldsTwentyNine__c</fullName>
    <label>LimitCustomFieldsTwentyNine</label>
    <length>20</length>
    <type>Text</type>
</CustomField>