force-app/main/default/objects/Account/fields/LimitCustomFieldsTwentyOne__c.field-meta.xml
<CustomField>
    <fullName>LimitCustomFieldsTwentyOne__c</fullName>
    <label>LimitCustomFieldsTwentyOne</label>
    <length>20</length>
    <type>Text</type>
</CustomField>