force-app/main/default/objects/Account/fields/LimitCustomFieldsTwentySeven__c.field-meta.xml
<CustomField>
    <fullName>LimitCustomFieldsTwentySeven__c</fullName>
    <label>LimitCustomFieldsTwentySeven</label>
    <length>20</length>
    <type>Text</type>
</CustomField>