force-app/main/default/objects/Account/fields/LimitCustomFieldsTwentySix__c.field-meta.xml
<CustomField>
    <fullName>LimitCustomFieldsTwentySix__c</fullName>
    <label>LimitCustomFieldsTwentySix</label>
    <length>20</length>
    <type>Text</type>
</CustomField>