force-app/main/default/objects/Account/fields/LimitCustomFieldsTwentyThree__c.field-meta.xml
<CustomField>
    <fullName>LimitCustomFieldsTwentyThree__c</fullName>
    <label>LimitCustomFieldsTwentyThree</label>
    <length>20</length>
    <type>Text</type>
</CustomField>