force-app/main/default/objects/Account/fields/LimitCustomFieldsTwentyTwo__c.field-meta.xml
<CustomField>
    <fullName>LimitCustomFieldsTwentyTwo__c</fullName>
    <label>LimitCustomFieldsTwentyTwo</label>
    <length>20</length>
    <type>Text</type>
</CustomField>