force-app/main/default/objects/Account/fields/LimitCustomFieldsTwo__c.field-meta.xml
<CustomField>
    <fullName>LimitCustomFieldsTwo__c</fullName>
    <label>LimitCustomFieldsTwo</label>
    <length>20</length>
    <type>Text</type>
</CustomField>