force-app/main/default/objects/Account/fields/RelationShipOveruseEighteen__c.field-meta.xml
<CustomField>
    <fullName>RelationShipOveruseEighteen__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RelationShipOveruseEighteen</label>
    <referenceTo>RelationShipOveruse__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>