force-app/main/default/objects/Account/fields/RelationShipOveruseNine__c.field-meta.xml
<CustomField>
    <fullName>RelationShipOveruseNine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RelationShipOveruseNine</label>
    <referenceTo>RelationShipOveruse__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>