force-app/main/default/objects/Account/fields/RelationShipOveruseOne__c.field-meta.xml
<CustomField>
    <fullName>RelationShipOveruseOne__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RelationShipOveruseOne</label>
    <referenceTo>RelationShipOveruse__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>