force-app/main/default/objects/Account/fields/RelationShipOveruseSeven__c.field-meta.xml
<CustomField>
    <fullName>RelationShipOveruseSeven__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RelationShipOveruseSeven</label>
    <referenceTo>RelationShipOveruse__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>