force-app/main/default/objects/Account/fields/RelationShipOveruseSeventeen__c.field-meta.xml
<CustomField>
    <fullName>RelationShipOveruseSeventeen__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RelationShipOveruseSeventeen</label>
    <referenceTo>RelationShipOveruse__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>