force-app/main/default/objects/Account/fields/RelationShipOveruseThirteen__c.field-meta.xml
<CustomField>
    <fullName>RelationShipOveruseThirteen__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RelationShipOveruseThirteen</label>
    <referenceTo>RelationShipOveruse__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>