force-app/main/default/objects/Account/fields/RelationShipOveruseThree__c.field-meta.xml
<CustomField>
    <fullName>RelationShipOveruseThree__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RelationShipOveruseThree</label>
    <referenceTo>RelationShipOveruse__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>