force-app/main/default/objects/Account/fields/RelationShipOveruseTwentyFive__c.field-meta.xml
<CustomField>
    <fullName>RelationShipOveruseTwentyFive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RelationShipOveruseTwentyFive</label>
    <referenceTo>RelationShipOveruse__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>